objects/Survey_Q__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>CASESAFEID(EBSB__r.AccountCustom__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnswerPart__c</fullName>
        <label>Sub Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answere__c</fullName>
        <label>Answer</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bundle_Card_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bundle Card Item</label>
        <referenceTo>Bundle_Card_Item__c</referenceTo>
        <relationshipLabel>Survey Information</relationshipLabel>
        <relationshipName>Survey_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseID__c</fullName>
        <externalId>true</externalId>
        <label>CaseID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case_Owner_Email__c</fullName>
        <formula>Case__r.Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>SurveyQs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EBSBId__c</fullName>
        <description>This field is created to capture the external Id values of Survey data for the EB/SB project.</description>
        <externalId>true</externalId>
        <label>EBSBId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EBSB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EB SB Project</label>
        <referenceTo>EB_SB_Builder__c</referenceTo>
        <relationshipLabel>Survey Information</relationshipLabel>
        <relationshipName>Survey_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lanyon_Migrated_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lanyon Migrated ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MobileAppId__c</fullName>
        <description>This will be used for external ids</description>
        <externalId>true</externalId>
        <label>MobileAppId</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MobileApp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up for mobile app</description>
        <label>Mobile App</label>
        <referenceTo>Mobile_Card__c</referenceTo>
        <relationshipLabel>Survey Information</relationshipLabel>
        <relationshipName>Survey_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_App_Record_id__c</fullName>
        <formula>MobileApp__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile App Record id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <description>This will reference the different types of Survey responses .</description>
        <label>Object Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnboardingId__c</fullName>
        <externalId>true</externalId>
        <label>OnboardingId</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Onboarding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up for onboarding</description>
        <label>Onboarding</label>
        <referenceTo>Onboarding__c</referenceTo>
        <relationshipLabel>Survey Information</relationshipLabel>
        <relationshipName>Survey_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Onsite_Solutions_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onsite Solutions Project</label>
        <referenceTo>Alliance_OA_Projects__c</referenceTo>
        <relationshipLabel>Survey Information</relationshipLabel>
        <relationshipName>Survey_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <label>Owner ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PS_Points__c</fullName>
        <description>Populated by Apex Trigger.  Converts Very Satisfied, Satisfied, Neutral, Dissatisfied, Very Dissatisfied to 5,4,3,2,1 for rollup onto Project record</description>
        <label>PS Points</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Record_Owner_Email__c</fullName>
        <label>Parent Record Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PowerOfOne__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PowerOfOne</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Question Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Header</label>
        <referenceTo>Survey_Header__c</referenceTo>
        <relationshipLabel>Survey Information</relationshipLabel>
        <relationshipName>Survey_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Completed_Date__c</fullName>
        <label>Survey Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TM_OnboardingId__c</fullName>
        <externalId>true</externalId>
        <label>TM_OnboardingId</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TM_Onboarding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TM Onboarding</label>
        <referenceTo>TM_Buildout__c</referenceTo>
        <relationshipLabel>Survey Information</relationshipLabel>
        <relationshipName>Survey_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>This Object is used for survey information .</description>
    <label>Survey Information</label>
    <nameField>
        <label>Surveyor's Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>